@@ -2,12 +2,12 @@ import {
   SplitFactory,
   SplitFactoryProvider, SplitClient, SplitTreatments,
   useSplitClient, useSplitTreatments, useTrack, useSplitManager,
-  SplitContext,
+  useSplitContext,
 } from './src/index';
 
 export default {
   SplitFactory,
   SplitFactoryProvider, SplitClient, SplitTreatments,
   useSplitClient, useSplitTreatments, useTrack, useSplitManager,
-  SplitContext,
+  useSplitContext,
 };
